--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.cache.type=none
+spring.datasource.url=jdbc:mysql://localhost/dbPersonaGen?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.jakarta.persistence.sharedCache.mode=UNSPECIFIED
+spring.jpa.open-in-view=true
