--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
+			<scope>provided</scope>
 			<version>10.1.2</version>
 		</dependency>
 		<dependency>
