--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.edu.infnet</groupId>
-	<artifactId>gerenciadorpersonagens</artifactId>como
+	<artifactId>gerenciadorpersonagens</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>gerenciadorpersonagens</name>
 	<description>Gerenciador de Personagens</description>
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>24.0.1</version>
             <scope>compile</scope>
         </dependency>
 		<dependency>
